--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Coursera Test New New Again
+    Coursera Test New New Again next version
 </body>
 </html>
